--- a/css/sass/debug.sass
+++ b/css/sass/debug.sass
@@ -88,6 +88,10 @@ body .ad-debug-box
 .hidden
   display: none
 
+.ad-debug-highlight-ad
+  border: 1px solid #f00
+  @include shadow(0, 0, 10px, 1px, #000)
+
 body .ad-debug-box.dragging
   @include shadow(0, 0, 14px, 3px, #333)
   @include transform(scale(1.03, 1.03))
