--- a/css/sass/debug.sass
+++ b/css/sass/debug.sass
@@ -92,7 +92,7 @@ body .ad-debug-box
   border: 1px solid #f00
   @include shadow(0, 0, 10px, 2px, #000)
   @include transition(box-shadow 0.15s)
-  @include transform(scale(1.09, 1.09))
+  @include transform(scale(1.06, 1.06))
 
 
 body .ad-debug-box.dragging
@@ -114,8 +114,7 @@ body .ad-debug-console
   .pad5
     padding: 5px
 
-  .button
-    color: #369
+  .console-button
     cursor: pointer
 
   .ad-debug-console-title
@@ -134,6 +133,9 @@ body .ad-debug-console
 
   .orange
     background-color: #F5A869
+
+  .blue
+    color: #369
 
   .grey
     background-color: #ccc
