more debug updates

--- a/css/sass/debug.sass
+++ b/css/sass/debug.sass
@@ -92,7 +92,6 @@ body .ad-debug-box
   border: 1px solid #f00
   @include shadow(0, 0, 10px, 2px, #000)
   @include transition(box-shadow 0.15s)
-  @include transform(scale(1.06, 1.06))
 
 
 body .ad-debug-box.dragging
@@ -109,6 +108,7 @@ body .ad-debug-console
   font-size: 14px
   line-height: normal
   font-family: sans-serif
+  text-align: left
   @include shadow(0, 0, 10px, 1px, #333)
 
   .pad5
