updates to mobile, mostly

--- a/css/sass/wp_mobile.sass
+++ b/css/sass/wp_mobile.sass
@@ -1,3 +1,15 @@
 //Let's use this file for any styles we need to set/override on washingtonpost.com
 
 @import vars
+
+.ad-fixed-bottom
+  position: fixed
+  bottom: 0
+  left: 0
+  width: 100%
+  background-color: white
+
+.ad-fixed-bottom > iframe
+  display: block
+  width: 300px
+  margin: 0 auto
