--- a/css/sass/wp_mobile.sass
+++ b/css/sass/wp_mobile.sass
@@ -1,6 +1,7 @@
 //Let's use this file for any styles we need to set/override on washingtonpost.com
 
 @import vars
+@import "compass/css3/box-shadow"
 
 .ad-fixed-bottom
   position: fixed
@@ -8,6 +9,7 @@
   left: 0
   width: 100%
   background-color: white
+  +box-shadow(#000 0 0 10px)
 
 .ad-fixed-bottom > iframe
   display: block
