--- a/css/sass/debug.sass
+++ b/css/sass/debug.sass
@@ -69,6 +69,14 @@ body .ad-debug-box
   ul
     padding-left: 16px
 
+  textarea
+    border: 1px solid #000
+    padding: 5px
+    width: 100%
+    color: #000
+    font-family: monospace
+    font-size: 12px
+
   .ad-debug-bold
     font-weight: bold
 
