--- a/css/wp_mobile.css
+++ b/css/wp_mobile.css
@@ -1,1 +1,1 @@
-.ad-fixed-bottom{position:fixed;bottom:0;left:0;width:100%;background-color:#fff;-webkit-box-shadow:#000 0 0 10px;-moz-box-shadow:#000 0 0 10px;box-shadow:#000 0 0 10px}.ad-fixed-bottom>iframe{display:block;width:300px;margin:0 auto}
+#slug_fixedBottom{position:fixed;bottom:0;left:0;width:100%;height:50px;background-color:#eee;text-align:center;z-index:1000000;padding-top:1px}
