--- a/css/sass/wp_mobile.sass
+++ b/css/sass/wp_mobile.sass
@@ -1,4 +1,4 @@
-//Let's use this file for any styles we need to set/override on washingtonpost.com
+//Let's use this file for any styles we need to set/override on washingtonpost.com mobile
 
 @import vars
 @import "compass/css3/box-shadow"
@@ -14,8 +14,9 @@
   text-align: center
   z-index: 1000000
   padding-top: 1px
-//  +box-shadow(#000 0 0 10px)
   +box-shadow(#eee 0 -1px 2px)
+
+//  +box-shadow(#000 0 0 10px)
 
 //.ad-fixed-bottom > iframe
 //  display: block
