--- a/css/wp_mobile.css
+++ b/css/wp_mobile.css
@@ -1,1 +1,1 @@
-#slug_fixedBottom{position:fixed;bottom:0;left:0;width:100%;height:50px;background-color:#eee;text-align:center;z-index:1000000;padding-top:1px}
+#slug_fixedBottom{position:fixed;bottom:0;left:0;width:100%;height:50px;background-color:#eee;text-align:center;z-index:1000000;padding-top:1px;-webkit-box-shadow:#eee 0 -1px 2px;-moz-box-shadow:#eee 0 -1px 2px;box-shadow:#eee 0 -1px 2px}
