--- a/css/sass/_mixins.sass
+++ b/css/sass/_mixins.sass
@@ -1,5 +1,9 @@
 /* _mixins.sass */
 
+/**
+ * USE COMPASS BUILT IN MIXINS IF POSSIBLE - LEAVING SOME OF THESE FOR REFERENCE, THOUGH
+ */
+
 @mixin transition($args...)
   -moz-transition: $args
   -webkit-transition: $args
