--- a/css/sass/wp_mobile.sass
+++ b/css/sass/wp_mobile.sass
@@ -1,7 +1,6 @@
 //Let's use this file for any styles we need to set/override on washingtonpost.com mobile
-
+@import "compass/css3"
 @import vars
-@import "compass/css3/box-shadow"
 
 //.ad-fixed-bottom
 #slug_fixedBottom
