moving sass vars into vars partial

--- a/css/sass/_vars.sass
+++ b/css/sass/_vars.sass
@@ -2,3 +2,13 @@
 
 //urls
 $img_base: 'http://img.wpdigital.net/wp-srv/ad/loaders/latest/img/'
+
+//colours
+$border: 1px solid #000
+$green: #97DE98
+$orange: #F5A869
+$yellow: #fa0
+$blue: #369
+$grey: #ccc
+$shadow-colour: #333
+$shadow-color: $shadow-colour
