--- a/css/sass/debug.sass
+++ b/css/sass/debug.sass
@@ -72,8 +72,6 @@ body .ad-debug-box
   .ad-debug-bold
     font-weight: bold
 
-  .hidden
-    display: none
 
 .ad-debug-highlight-ad
   border: 1px solid #f00
@@ -122,6 +120,10 @@ body .ad-debug-console
   .orange
     background-color: $orange
 
+  .vi-queue
+    background-color: #ADD8E6
+    color: #444
+
   .blue
     color: $blue
 
@@ -132,5 +134,5 @@ body .ad-debug-console
   .ad-debug-bold
     font-weight: bold
 
-  .hidden
-    display: none
+.debug-hidden
+  display: none
