adding class for stying inline bb's

--- a/css/sass/wp.sass
+++ b/css/sass/wp.sass
@@ -10,3 +10,14 @@ body
   #wpni_adi_featrent
     background: none
     padding: 0
+
+.wp-inline-bb
+  background-image: url(http://img.washingtonpost.com/rw/sites/twpweb/img/sprites/ad-sprite.png?t=b20131022150300)
+  background-position: 123px -398px
+  background-repeat: no-repeat
+  padding: 0
+  padding-top: 15px
+  margin-top: 15px
+  float: left
+  padding: 15px 0 0 0
+  margin-top: 15px 10px 10px 0
